Use visibility hidden and avoid overwriting

--- a/src/scss/blocks/nova-blocks/sharing-overlay/_style.scss
+++ b/src/scss/blocks/nova-blocks/sharing-overlay/_style.scss
@@ -2,12 +2,6 @@
     @include variation(dark);
     @include apply-font(body);
     
-    visibility: hidden;
-    
-    &.is-visible {
-        visibility: visible;
-    }
-    
     .novablocks-sharing__wrap {
         
         @include specific(3) {
@@ -18,6 +12,8 @@
     &[class]:not(.is-visible) {
         display: block;
         pointer-events: none;
+    
+        visibility: hidden;
         
         .novablocks-sharing__wrap {
             opacity: 0;
